# geez-link

./: Amharic-Triplet-Dataset-Creation-Pipeline.ipynb  Amharic_XLM_R_FineTuning.ipynb  readme.md
backend/: requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routes/: chat.py  sessions.py
backend/app/services/: embeddings.py  gemini_client.py  openai_client.py  pdf_processing.py  redis.py
backend/flask-api/: app.py  config.py  requirements.txt
backend/flask-api/services/: chat_service.py  pdf_service.py  pdf_to_vector.py  session_service.py
frontend/chat-with-ur-file/: package-lock.json  package.json
frontend/chat-with-ur-file/app/: page.tsx
frontend/chat-with-ur-file/app/chat/: page.tsx
frontend/chat-with-ur-file/app/components/: chatInterface.tsx  fileUpload.tsx
frontend/chat-with-ur-file/app/hooks/: useChatSession.ts
frontend/chat-with-ur-file/app/welcome/: page.tsx
model_training/: pyproject.toml
model_training/data/: test.csv
